# croc-desktop

./: .gitignore  README.md  RELEASING.md  electron-builder.json5  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
electron/: electron-env.d.ts  main.ts  preload.ts
electron/ipc/: register.ts  types.d.ts
electron/ipc/croc/: channels.ts  main.ts  preload.ts  utils.ts
electron/lib/: codephrase.ts  config.ts  croc.ts  history.ts  index.ts  window.ts
patches/: dmg-builder+24.13.3.patch
scripts/: fetch-croc.mjs  fix-node-pty-perms.mjs
src/: app.tsx  main.tsx  styles.css  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json  updater.json
src-tauri/examples/: pty_spike.rs
src-tauri/icons/: icon.icns
src-tauri/src/: clipboard.rs  codephrase.rs  commands.rs  croc.rs  history.rs  lib.rs
src/components/: AppShell.tsx  CrocLogo.tsx  QrScanner.tsx  Sidebar.tsx  UpdateBanner.tsx
src/components/app/: Dropzone.tsx  SendApp.tsx  SendPanel.tsx  StagingPanel.tsx
src/components/screens/: AboutScreen.tsx  HistoryScreen.tsx  ReceiveScreen.tsx  SendScreen.tsx  SettingsScreen.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  middle-truncate.tsx  status-chip.tsx
src/lib/: badge.ts  clipboard.ts  ipc-types.ts  notify.ts  paths.ts  prefs.ts  updater.tsx  useReceive.ts  useSend.ts
src/lib/services/: ipc.ts
