[package]
name = "app"
version = "1.4.0"
description = "Croc Desktop — GUI for the croc secure file transfer tool"
authors = ["Carlos Daniel Vilaseca Illnait"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-sharekit = "0.3.1"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
portable-pty = "0.9"
regex = "1"
qrcode = "0.14"
base64 = "0.22"
rand = "0.8"

# Read file paths off the native pasteboard (Finder "Copy" → in-app paste).
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = "0.3"
objc2-foundation = "0.3"
